--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,11 @@
   box-sizing: border-box;
   font-family: Arial;
 }
-
+#title{
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0002);
+  -webkit-animation: colorchange 20s infinite alternate;
+  text-align:center;
+}
 body {
   background-color: hsl(240, 3%, 7%);
   display: flex;
@@ -20,7 +24,11 @@ body {
   gap: .25em;
   justify-content: center;
 }
+.key:hover{
+  box-shadow: 0px 0px 10px blue;
+  border-color: blue;
 
+}
 .key {
   font-size: inherit;
   grid-column: span 2;
@@ -39,7 +47,51 @@ body {
   cursor: pointer;
   user-select: none;
 }
+@-webkit-keyframes colorchange {
+  0% {
+      color: blue;
+  }
 
+  10% {
+      color: #8e44ad;
+  }
+
+  20% {
+      color: #1abc9c;
+  }
+
+  30% {
+      color: #d35400;
+  }
+
+  40% {
+      color: blue;
+  }
+
+  50% {
+      color: #34495e;
+  }
+
+  60% {
+      color: blue;
+  }
+
+  70% {
+      color: #2980b9;
+  }
+
+  80% {
+      color: #f1c40f;
+  }
+
+  90% {
+      color: #2980b9;
+  }
+
+  100% {
+      color: pink;
+  }
+}
 .key.large {
   grid-column: span 3;
 }
