--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,7 @@ a {
 }
 
   a:hover {
-     
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0002);
       background: #21ebff;
       color: #111;
       box-shadow: 0 0 50px #21ebff;
